<?xml version="1.0"?>
<package>
  <name>kr10_description</name>
  <version>0.0.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR 10 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR 10 manipulators. This currently includes the R1100 sixx only.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>KR 10 R1100 sixx - Default</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities are based on the information
      in the <em>KUKA Roboter GmbH - KR AGILUS sixx - With W and C Variants -
      Specification</em> version <em>Spez KR AGILUS sixx V12, 26.03.2015</em>.
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="linzhank@gmail.com">LinZHank</author>
  <maintainer email="linzhank@gmail.com">LinZHank</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kuka_kr10_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
